tests/snapshots/emitter_test__can_emit_complex_src.snap
---
source: tests/emitter_test.rs
expression: "emitter::Emitter::new().emit(parsed).unwrap()"
---
EmitterResult {
    code: "#include <stdlib.h>\n#include <stdio.h>\n#include <string>\n#include <vector>\n#include <algorithm>\n#include <memory>\n#include \"runtime.hpp\"\nint main() {\nTsFunction* _foo = new TsFunction(\"foo\",TsCoreHelpers::toVector<TsFunctionParam>({TsFunctionParam(\"a\", 0)TsFunctionParam(\"b\", 0)}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nauto _ay = new TsNum(5);\nauto _bee = new TsString(\"bar\");\nreturn _ay\n;\n});\nTsFunction* _blah = new TsFunction(\"blah\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nauto _foo = new TsString(\"asdf\");\nauto _bar = _foo;\n_bar = new TsString(\"bar\");\nreturn _foo\n;\n});\nTsFunction* _blah2 = new TsFunction(\"blah2\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nreturn NULL;\n});\nTsFunction* _blah3 = new TsFunction(\"blah3\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nauto _foo = new TsNum(5);\nreturn _foo\n;\n});\nTsFunction* _returnsFn = new TsFunction(\"returnsFn\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nreturn new TsFunction(\"\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", new TsString(\"in nested!\"))}));\nreturn NULL;\n})\n;\n});\nTsFunction* _run = new TsFunction(\"run\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nTsFunction* _baz = new TsFunction(\"baz\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", new TsString(\"in baz!\"))}));\nreturn NULL;\n});\nauto _obj = new TsObject(1, TsCoreHelpers::toVector<ToObjectField*>({new TsObjectField(TsObjectFieldDescriptor(TsString(\"foo\"), 0)new TsString(\"bar\")), new TsObjectField(TsObjectFieldDescriptor(TsString(\"baz\"), 0)new TsNum(5)), new TsObjectField(TsObjectFieldDescriptor(TsString(\"qux\"), 0)new TsObject(1, TsCoreHelpers::toVector<ToObjectField*>({new TsObjectField(TsObjectFieldDescriptor(TsString(\"a\"), 0)new TsString(\"a\")), new TsObjectField(TsObjectFieldDescriptor(TsString(\"foo\"), 0)new TsFunction(\"\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", new TsString(\"in foo!\"))}));\nreturn NULL;\n}))})))}));\n_obj->getFieldValue(\"qux\")->getFieldValue(\"a\")->setFieldValue(\"a\", new TsString(\"hello, world!\"));\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", _obj->getFieldValue(\"qux\")->getFieldValue(\"a\"))}));\n_obj->getFieldValue(\"qux\")->getFieldValue(\"foo\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({}));\n_baz->invoke(TsCoreHelpers::toVector<TsFunctionArg>({}));\n_returnsFn->invoke(TsCoreHelpers::toVector<TsFunctionArg>({}))->invoke(TsCoreHelpers::toVector<TsFunctionArg>({}));\nauto _foo = new TsObject(1, TsCoreHelpers::toVector<ToObjectField*>({new TsObjectField(TsObjectFieldDescriptor(TsString(\"str\"), 0)new TsString(\"str\")), new TsObjectField(TsObjectFieldDescriptor(TsString(\"num\"), 0)new TsNum(5)), new TsObjectField(TsObjectFieldDescriptor(TsString(\"bar\"), 0)new TsObject(1, TsCoreHelpers::toVector<ToObjectField*>({new TsObjectField(TsObjectFieldDescriptor(TsString(\"str\"), 0)new TsString(\"hello\"))}))), new TsObjectField(TsObjectFieldDescriptor(TsString(\"baz\"), 0)new TsObject(1, TsCoreHelpers::toVector<ToObjectField*>({new TsObjectField(TsObjectFieldDescriptor(TsString(\"name\"), 0)new TsString(\"world!\"))})))}));\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", _foo->getFieldValue(\"bar\")->getFieldValue(\"str\"))}));\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", _foo->getFieldValue(\"baz\")->getFieldValue(\"name\"))}));\nauto _bar = new TsObject(1, TsCoreHelpers::toVector<ToObjectField*>({new TsObjectField(TsObjectFieldDescriptor(TsString(\"name\"), 0)new TsString(\"foo\")), new TsObjectField(TsObjectFieldDescriptor(TsString(\"sayName\"), 0)new TsFunction(\"\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nconsole->getFieldValue(\"log\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({TsFunctionArg(\"sdjkl\", _this->getFieldValue(\"getName\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({})))}));\nreturn NULL;\n})), new TsObjectField(TsObjectFieldDescriptor(TsString(\"getName\"), 0)new TsFunction(\"\",TsCoreHelpers::toVector<TsFunctionParam>({}), [=](TsObject* _this, std::vector<TsFunctionArg> args) -> TsObject* {\nreturn _this->getFieldValue(\"name\")\n;\n}))}));\n_bar->getFieldValue(\"sayName\")->invoke(TsCoreHelpers::toVector<TsFunctionArg>({}));\nreturn NULL;\n});\n_run->invoke(TsCoreHelpers::toVector<TsFunctionArg>({}));\n}",
}
